--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@
 <body>
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="/js/app/main.js"></script>
+    <script type="module" src="/js/app/main.js"></script>
 </body>
 </html>
