--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet"
             type="text/css">
         <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="assets/css/prosemirror.css">
     </head>
 <body>
     <div id="root"></div>
